[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hurdle-forecast"
version = "0.1.0"
description = "Zero-inflated weekly seasonal demand forecasting via beta-smoothed classifier + SARIMA intensity"
authors = [{ name="castorp+GPT", email="example@example.com" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "scikit-learn>=1.2",
  "pytz",
  "python-dateutil",
  # torch is optional and heavy; install manually if you want MPS logistic regression.
]
[project.scripts]
hurdle-forecast = "hurdle_forecast.cli:main"
